2006-03-25  Olivier Jolly  <olivier.jolly@pcedev.com>

    * java/net/URLClassLoader.java (FileURLLoader.getResource): Added test
    to validate all components of a resource path.
    (FileURLLoader.walkPathComponents): Helper which ensures that we are
    allowed to walk through every component of a resource path.
    
2006-03-25  Michael Koch  <konqueror@gmx.de>

	* NEWS: Added item for CLDR 1.3 update.

2006-03-25  Michael Koch  <konqueror@gmx.de>

	* resource/gnu/java/locale/LocaleInformation_ar_IN.properties,
	resource/gnu/java/locale/LocaleInformation_ar_IQ.properties,
	resource/gnu/java/locale/LocaleInformation_ar_KW.properties,
	resource/gnu/java/locale/LocaleInformation_ar_LY.properties,
	resource/gnu/java/locale/LocaleInformation_mn_MN.properties,
	resource/gnu/java/locale/LocaleInformation_uz_AF.properties:
	Removed locales.

2006-03-25  Michael Koch  <konqueror@gmx.de>

	* resource/gnu/java/locale/LocaleInformation_az.properties,
	resource/gnu/java/locale/LocaleInformation_bs.properties,
	resource/gnu/java/locale/LocaleInformation_byn.properties,
	resource/gnu/java/locale/LocaleInformation_byn_ER.properties,
	resource/gnu/java/locale/LocaleInformation_el_CY.properties,
	resource/gnu/java/locale/LocaleInformation_gez.properties,
	resource/gnu/java/locale/LocaleInformation_gez_ER.properties,
	resource/gnu/java/locale/LocaleInformation_gez_ET.properties,
	resource/gnu/java/locale/LocaleInformation_haw.properties,
	resource/gnu/java/locale/LocaleInformation_haw_US.properties,
	resource/gnu/java/locale/LocaleInformation_kok.properties,
	resource/gnu/java/locale/LocaleInformation_kok_IN.properties,
	resource/gnu/java/locale/LocaleInformation_sid.properties,
	resource/gnu/java/locale/LocaleInformation_sid_ET.properties,
	resource/gnu/java/locale/LocaleInformation_sl_SI.properties,
	resource/gnu/java/locale/LocaleInformation_sr_BA_Cyrl.properties,
	resource/gnu/java/locale/LocaleInformation_sr_BA_Latn.properties,